--- a/v1.html
+++ b/v1.html
@@ -1,13 +1,12 @@
 # Intro
-<p>Imagine you have a computer and you have written some code which is usefull for others and they want to access it, insted of giving your code to everyone, you can host it on the internet using some protocol such as API's.</p>
-  <br></br>
-  <p>Now think of client server architecture, where client sends a request to server to access some service and server responds with a response saying whether it can provide the service or not depending on various conditions.</p>
-  <br></br>
-<p>Instead of self hosting the service we can use cloud to host our service where we dont need to take care of various things such as maintaing and managing DB, computational power and other resources, etc..</p>
-  <br></br>
-  <p>Cloud is nothing a but a set of computer which we access using remote login, they provide all the resources that are required for money, and we can concentrate more on our business perspective.</p>
-  <br></br>
-    <p>Now when huge number of people are accessing our service, it should be able to handle large number of requests for that we need to increase the scalability of the system.</p>
-  <br></br>
-      <p>We have two solutions to increase the scalability</p>
+-> Imagine you have a computer and you have written some code which is usefull for others and they want to access it, insted of giving your code to everyone, you can host it on the internet using some protocol such as API's.
+-> Now think of client server architecture, where client sends a request to server to access some service and server responds with a response saying whether it can provide the service or not depending on various conditions.
+  
+-> Instead of self hosting the service we can use cloud to host our service where we dont need to take care of various things such as maintaing and managing DB, computational power and other resources, etc..
+ 
+-> Cloud is nothing a but a set of computer which we access using remote login, they provide all the resources that are required for money, and we can concentrate more on our business perspective.
+
+-> Now when huge number of people are accessing our service, it should be able to handle large number of requests for that we need to increase the scalability of the system.
+  
+-> We have two solutions to increase the scalability
       
